Fixing final layout issues

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -208,6 +208,7 @@
   .site-social-header {
     display: unset;
     padding-right: 10px;
+    padding-left: 0px;
   }
 
   .site-nav {
